Add machine translation

--- a/l10n/po/ja_JP/_data/guides-latest.yaml.po
+++ b/l10n/po/ja_JP/_data/guides-latest.yaml.po
@@ -1967,7 +1967,6 @@ msgstr "/guides/security-ldap"
 #. type: Hash Value: categories guides description
 #: upstream/_data/guides-latest.yaml:0
 #, fuzzy, no-wrap
-#| msgid "This guide demonstrates how to use the OpenID Connect extension to protect your Quarkus JAX-RS service application using Bearer Token Authorization where the tokens are issued by OpenId Connect Providers such as Keycloak."
 msgid "This guide demonstrates how to use the OpenID Connect extension to protect your Quarkus JAX-RS service application using Bearer Token Authorization where the tokens are issued by OpenID Connect Providers such as Keycloak."
 msgstr "このガイドでは、OpenID Connectエクステンションを使用して、KeycloakなどのOpenIdConnectプロバイダーによってトークンが発行されるBearerTokenAuthorizationを使用してQuarkusJAX-RSサービスアプリケーションを保護する方法を示します。"
 
@@ -1992,7 +1991,6 @@ msgstr "/guides/security-openid-connect"
 #. type: Hash Value: categories guides description
 #: upstream/_data/guides-latest.yaml:0
 #, fuzzy, no-wrap
-#| msgid "This guide demonstrates how to use the OpenID Connect extension to protect your Quarkus JAX-RS web application using the Authorization Code Flow and OpenId Connect Providers such as Keycloak."
 msgid "This guide demonstrates how to use the OpenID Connect extension to protect your Quarkus JAX-RS web application using the Authorization Code Flow and OpenID Connect Providers such as Keycloak."
 msgstr "このガイドでは、Quarkusを使用してAuthorization Code Flowに基づいてWebアプリケーションを保護するためにOpenID Connect Extensionを使用する方法を説明します。"
 
@@ -2070,21 +2068,19 @@ msgstr "/guides/security-openid-connect-client"
 
 #. type: Hash Value: categories guides description
 #: upstream/_data/guides-latest.yaml:0
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "This guide explains how to configure Quarkus to authenticate against well-known OpenID Connect providers such as GitHub, Google, Microsoft, Apple..."
-msgstr ""
+msgstr "このガイドでは、GitHub、Google、Microsoft、Appleなどの有名なOpenID Connectプロバイダーに対して認証するためにQuarkusを設定する方法について説明します。"
 
 #. type: Hash Value: categories guides title
 #: upstream/_data/guides-latest.yaml:0
 #, fuzzy, no-wrap
-#| msgid "OpenID Connect (OIDC) Dev Services"
 msgid "Configuring Well-Known OpenID Connect (OIDC) Providers"
 msgstr "OpenID Connect (OIDC) を使用したサービスアプリケーションの保護"
 
 #. type: Hash Value: categories guides url
 #: upstream/_data/guides-latest.yaml:0
 #, fuzzy, no-wrap
-#| msgid "/guides/security-openid-connect-dev-services"
 msgid "/guides/security-openid-connect-providers"
 msgstr "/guides/security-openid-connect-dev-services"
 
@@ -2277,28 +2273,24 @@ msgstr "/guides/credentials-provider"
 #. type: Hash Value: categories guides description
 #: upstream/_data/guides-latest.yaml:0
 #, fuzzy, no-wrap
-#| msgid "This guide demonstrates how your Quarkus application can use a database to store your user identities."
 msgid "This guide demonstrates how your Quarkus application can use WebAuthn authentication instead of passwords."
 msgstr "このガイドでは、Quarkusアプリケーションがデータベースを使用してユーザーIDを保存する方法を説明します。"
 
 #. type: Hash Value: categories guides keywords
 #: upstream/_data/guides-latest.yaml:0
 #, fuzzy, no-wrap
-#| msgid "security"
 msgid "security,webauthn"
 msgstr "security"
 
 #. type: Hash Value: categories guides title
 #: upstream/_data/guides-latest.yaml:0
 #, fuzzy, no-wrap
-#| msgid "Using Security with JPA"
 msgid "Using Security with WebAuthn"
 msgstr "JPAでSecurityを使用する"
 
 #. type: Hash Value: categories guides url
 #: upstream/_data/guides-latest.yaml:0
 #, fuzzy, no-wrap
-#| msgid "/guides/security-oauth2"
 msgid "/guides/security-webauthn"
 msgstr "/guides/security-oauth2"
 
