--- a/l10n/po/ja_JP/_guides/http-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/http-reference.adoc.po
@@ -123,24 +123,27 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/http-reference.adoc:71
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "HTTP Compression"
-msgstr ""
+msgstr "HTTP圧縮"
 
 #. type: Plain text
 #: upstream/_guides/http-reference.adoc:76
+#, fuzzy
 msgid "The response body of a static resource is not compressed by default.  You can enable the HTTP compression support by means of `quarkus.http.enable-compression=true`.  If compression support is enabled then the response body is compressed if the `Content-Type` header derived from the file name of a resource is a compressed media type as configured via `quarkus.http.compress-media-types`."
-msgstr ""
+msgstr "静的リソースのレスポンスボディは、デフォルトでは圧縮されない。HTTP 圧縮サポートを有効にするには、 `quarkus.http.enable-compression=true` で設定します。 圧縮サポートが有効な場合、リソースのファイル名から得られる `Content-Type` ヘッダーが `quarkus.http.compress-media-types` で設定した圧縮メディアタイプであれば、レスポンスボディは圧縮されます。"
 
 #. type: Plain text
 #: upstream/_guides/http-reference.adoc:78
+#, fuzzy
 msgid "By default, the following list of media types is compressed: `text/html`, `text/plain`, `text/xml`, `text/css`, `text/javascript` and `application/javascript`."
-msgstr ""
+msgstr "デフォルトでは、以下のメディアタイプのリストが圧縮されています。 `text/html` , `text/plain` , `text/xml` , `text/css` , `text/javascript` , `application/javascript` ."
 
 #. type: Plain text
 #: upstream/_guides/http-reference.adoc:80
+#, fuzzy
 msgid "If the client does not support HTTP compression then the response body is not compressed."
-msgstr ""
+msgstr "クライアントが HTTP 圧縮に対応していない場合、レスポンスボディは圧縮されません。"
 
 #. type: Title ==
 #: upstream/_guides/http-reference.adoc:82
@@ -170,28 +173,33 @@ msgstr "テストに REST Assured を使用し、`quarkus.http.root-path` が設
 
 #. type: Plain text
 #: upstream/_guides/http-reference.adoc:99
+#, fuzzy
 msgid "In general, path configurations for web content are interpreted relative to `quarkus.http.root-path` (which is / by default)."
-msgstr ""
+msgstr "一般に、ウェブコンテンツのパス設定は、 `quarkus.http.root-path` （デフォルトでは/）からの相対パスとして解釈されます。"
 
 #. type: Plain text
 #: upstream/_guides/http-reference.adoc:101
+#, fuzzy
 msgid "To specify paths within this context root, use a relative path that does not begin with a forward slash."
-msgstr ""
+msgstr "このコンテキストルート内のパスを指定するには、フォワードスラッシュで始まらない相対パスを使用します。"
 
 #. type: Plain text
 #: upstream/_guides/http-reference.adoc:103
+#, fuzzy
 msgid "If you want to specify the URI explicitly, so it is always the same regardless of the value of `quarkus.http.root-path`, use an absolute path that begins with a forward slash."
-msgstr ""
+msgstr "URIを明示的に指定し、 `quarkus.http.root-path` の値にかかわらず常に同じになるようにしたい場合は、フォワードスラッシュで始まる絶対パスを使用します。"
 
 #. type: Plain text
 #: upstream/_guides/http-reference.adoc:105
+#, fuzzy
 msgid "As an example, if an extension configures a `service` path, that endpoint will be served from `${quarkus.http.root-path}/service`. If you change the configuration of that path to `/service`, that endpoint will be served from `/service`."
-msgstr ""
+msgstr "例として、拡張機能が `service` のパスを設定した場合、そのエンドポイントは `${quarkus.http.root-path}/service` から提供されます。 そのパスの設定を `/service` に変更した場合、そのエンドポイントは `/service` から提供されます。"
 
 #. type: Plain text
 #: upstream/_guides/http-reference.adoc:107
+#, fuzzy
 msgid "The link:https://quarkus.io/blog/path-resolution-in-quarkus/[Path Resolution in Quarkus] blog post further explains how path resolution works for both user and extension defined paths."
-msgstr ""
+msgstr "link:https://quarkus.io/blog/path-resolution-in-quarkus/[Quarkusのパス解決に関する] ブログ記事では、ユーザー定義パスと拡張機能定義パスの両方に対するパス解決の仕組みについて詳しく説明しています。"
 
 #. type: Title ==
 #: upstream/_guides/http-reference.adoc:109
@@ -413,8 +421,9 @@ msgstr "追加のHTTPヘッダー"
 
 #. type: Plain text
 #: upstream/_guides/http-reference.adoc:211
+#, fuzzy
 msgid "If you need different header values depending on the path, you can use the following configuration:"
-msgstr ""
+msgstr "パスによって異なるヘッダ値が必要な場合は、以下のような設定にすることができます。"
 
 #. type: delimited block -
 #: upstream/_guides/http-reference.adoc:216
@@ -426,8 +435,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/http-reference.adoc:218
+#, fuzzy
 msgid "This will set the `Cache-Control` header to `none` when `/index.html` is called."
-msgstr ""
+msgstr "これにより、 `/index.html` が呼び出されたときに、 `Cache-Control` のヘッダが `none` に設定されます。"
 
 #. type: Plain text
 #: upstream/_guides/http-reference.adoc:220
