--- a/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
@@ -1037,13 +1037,15 @@ msgstr "ログアウト"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:475
+#, fuzzy
 msgid "link:https://openid.net/specs/openid-connect-backchannel-1_0.html[Back-Channel Logout] is used by OpenId Connect providers to logout the current user from all the applications this user is currently logged in, bypassing the user agent."
-msgstr ""
+msgstr "link:https://openid.net/specs/openid-connect-backchannel-1_0.html[Back-Channel Logout] は、OpenId Connect プロバイダが、ユーザエージェントをバイパスして、そのユーザが現在ログインしているすべてのアプリケーションからログアウトするために使用されます。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:477
+#, fuzzy
 msgid "You can configure Quarkus to support `Back-Channel Logout` as follows:"
-msgstr ""
+msgstr "Quarkusで `Back-Channel Logout` をサポートするように設定するには、次のようにします。"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:486
@@ -1053,8 +1055,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:489
+#, fuzzy
 msgid "Absolute `Back-Channel Logout` URL is calculated by adding `quarkus.oidc.back-channel-logout.path` to the current endpoint URL, for example, `http://localhost:8080/back-channel-logout`. You will need to configure this URL in the Admin Console of your OpenId Connect Provider."
-msgstr ""
+msgstr "絶対的な `Back-Channel Logout` URL は、例えば、現在のエンドポイント URL に `quarkus.oidc.back-channel-logout.path` を加えて計算されます。 `<a href=\"http://localhost:8080/back-channel-logout\" class=\"bare\">http://localhost:8080/back-channel-logout</a>` .この URL は、OpenId コネクトプロバイダのアドミンコンソールで設定する必要があります。"
 
 #. type: Title ====
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:491
@@ -2781,7 +2784,6 @@ msgstr "https://tools.ietf.org/html/rfc7519[JSON Web Token]"
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:1392
 #, fuzzy
-#| msgid "xref:security-openid-connect-dev-services.adoc[Dev Services for Keycloak]"
 msgid "xref:security-openid-connect-providers.adoc[Well Known OpenId Connect providers]."
 msgstr "xref:security-openid-connect-dev-services.adoc[Dev Services for Keycloak]"
 
