--- a/l10n/po/ja_JP/_guides/security.adoc.po
+++ b/l10n/po/ja_JP/_guides/security.adoc.po
@@ -97,19 +97,18 @@ msgstr "BasicおよびForm HTTPベースの認証メカニズムは、Quarkusで
 #. type: Title ===
 #: upstream/_guides/security.adoc:39
 #, fuzzy, no-wrap
-#| msgid "Combining Authentication Mechanisms"
 msgid "WebAuthn Authentication Mechanism"
 msgstr "認証メカニズムの組み合わせ"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:44
+#, fuzzy
 msgid "https://webauthn.guide/[WebAuthn] is an authentication mechanism designed to replace passwords. In short, every time you write a service for registering new users, or logging them in, instead of asking for a password, you use WebAuthn, which will replace the password."
-msgstr ""
+msgstr "link:https://webauthn.guide/[WebAuthn] は、パスワードを置き換えるために設計された認証機構です。つまり、新しいユーザーを登録したり、ログインしたりするサービスを書くたびに、パスワードを要求する代わりに、WebAuthn を使って、パスワードを置き換えるのです。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:46
 #, fuzzy
-#| msgid "Please see xref:security-built-in-authentication.adoc#mutual-tls[Mutual TLS Authentication] for more information."
 msgid "Please see xref:security-webauthn.adoc[our dedicated WebAuthn documentation] for more information."
 msgstr "詳しくは link:security-built-in-authentication#mutual-tls[相互TLS認証] をご覧ください。"
 
