--- a/l10n/po/ja_JP/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc.po
@@ -24,9 +24,9 @@ msgstr "gsmet"
 
 #. type: YAML Front Matter: date
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "2022-05-11"
-msgstr ""
+msgstr "2022-05-11"
 
 #. type: YAML Front Matter: layout
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:1
@@ -36,9 +36,9 @@ msgstr "post"
 
 #. type: YAML Front Matter: synopsis
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "We released Quarkus 2.9.0.Final with exciting new features such as a brand new WebAuthn extension"
-msgstr ""
+msgstr "Quarkus 2.9.0.Finalをリリースし、新しいWebAuthn拡張機能など、エキサイティングな新機能を追加しました。"
 
 #. type: YAML Front Matter: tags
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:1
@@ -48,48 +48,53 @@ msgstr "release"
 
 #. type: YAML Front Matter: title
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Quarkus 2.9.0.Final released - WebAuthn extension, Compression support for Reactive Routes and RESTEasy Reactive and much more..."
-msgstr ""
+msgstr "Quarkus 2.9.0.Final リリース - WebAuthn拡張、Reactive RoutesおよびRESTEasy ReactiveのCompressionサポート、その他多数..."
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:11
+#, fuzzy
 msgid "We just released Quarkus 2.9, which comes packed with new features:"
-msgstr ""
+msgstr "新機能を満載したQuarkus 2.9をリリースしました。"
 
 #. type: Title ===
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:13
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:26
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "WebAuthn extension"
-msgstr ""
+msgstr "WebAuthn 拡張"
 
 #. type: Title ===
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:14
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:63
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Compression support for Reactive Routes and RESTEasy Reactive"
-msgstr ""
+msgstr "Reactive RoutesとRESTEasy Reactiveの圧縮機能サポート"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:15
+#, fuzzy
 msgid "Support for Confluent Schema Registry"
-msgstr ""
+msgstr "Confluent Schema Registryのサポート"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:16
+#, fuzzy
 msgid "Support for Back channel logout"
-msgstr ""
+msgstr "バックチャンネルログアウトに対応"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:17
+#, fuzzy
 msgid "Kotlin and Scala upgrade"
-msgstr ""
+msgstr "KotlinとScalaのアップグレード"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:19
+#, fuzzy
 msgid "And much more..."
-msgstr ""
+msgstr "その他にも..."
 
 #. type: Title ==
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:20
@@ -99,8 +104,9 @@ msgstr "移行ガイド"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:23
+#, fuzzy
 msgid "To migrate from 2.8, please refer to https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.9[our migration guide]."
-msgstr ""
+msgstr "2.8から移行する場合は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.9[移行ガイドを] ご参照ください。"
 
 #. type: Title ==
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:24
@@ -110,191 +116,219 @@ msgstr "変更点"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:31
+#, fuzzy
 msgid "https://webauthn.guide/[WebAuthn] is an authentication mechanism designed to replace passwords. In short, every time you write a service for registering new users, or logging them in, instead of asking for a password, you use WebAuthn, which will replace the password."
-msgstr ""
+msgstr "link:https://webauthn.guide/[WebAuthn] は、パスワードを置き換えるために設計された認証機構です。つまり、新しいユーザーを登録したり、ログインしたりするサービスを書くたびに、パスワードを要求する代わりに、WebAuthn を使って、パスワードを置き換えるのです。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:36
+#, fuzzy
 msgid "WebAuthn replaces the password with a proof of identity. In practice, users, instead of having to invent a password, store it or remember it, will use a hardware token that will generate a proof of identity specifically for your service or website. This can be done by asking users to press their thumb on their phone, or pressing a button on a https://www.yubico.com[YubiKey] on a computer."
-msgstr ""
+msgstr "WebAuthnは、パスワードをIDの証明に置き換えます。実際には、ユーザーは、パスワードを考案したり、保存したり、記憶したりする代わりに、あなたのサービスやウェブサイトのために特別に身元証明を生成するハードウェアトークンを使用することになります。これは、ユーザーに携帯電話で親指を押してもらったり、パソコンで link:https://www.yubico.com[YubiKeyの] ボタンを押したりすることで実現可能です。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:39
+#, fuzzy
 msgid "Thanks to the new `quarkus-security-webauthn` extension, you can implement WebAuthn authentication in your Quarkus applications."
-msgstr ""
+msgstr "新しい `quarkus-security-webauthn` 拡張機能のおかげで、QuarkusアプリケーションにWebAuthn認証を実装することができます。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:41
+#, fuzzy
 msgid "You can find all the details about it in link:/guides/security-webauthn[the dedicated guide]."
-msgstr ""
+msgstr "その詳細は、 link:/guides/security-webauthn[専用ガイドに] 記載されています。"
 
 #. type: Title ===
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:42
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "OpenID Connect Providers"
-msgstr ""
+msgstr "OpenID Connect プロバイダ"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:45
+#, fuzzy
 msgid "Well-known OIDC providers, such as GitHub, Google, Microsoft, Apple... are very widely used to authenticate users in modern applications."
-msgstr ""
+msgstr "GitHub、Google、Microsoft、Appleなどの有名なOIDCプロバイダーは、最新のアプリケーションでユーザーを認証するために非常に広く使用されています。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:47
+#, fuzzy
 msgid "Configuring them can be hard and require work for each of them to properly understand how they implemented OIDC."
-msgstr ""
+msgstr "それらを設定するのは大変なことで、OIDCをどのように実装したかを正しく理解するためには、それぞれに作業が必要です。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:50
+#, fuzzy
 msgid "That's why Quarkus now comes with predefined settings for a lot of well-known providers and link:/guides/security-openid-connect-providers[an extensive documentation] will guide you through setting things up."
-msgstr ""
+msgstr "そのため、Quarkusには、多くの有名なプロバイダーの設定があらかじめ用意されており、 link:/guides/security-openid-connect-providers[豊富なドキュメントで] 設定方法を説明します。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:52
+#, fuzzy
 msgid "Providers currently covered are:"
-msgstr ""
+msgstr "現在、対象となるプロバイダーは以下の通りです。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:54
+#, fuzzy
 msgid "GitHub"
-msgstr ""
+msgstr "GitHub"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:55
+#, fuzzy
 msgid "Google"
-msgstr ""
+msgstr "グーグル"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:56
+#, fuzzy
 msgid "Microsoft"
-msgstr ""
+msgstr "マイクロソフト"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:57
+#, fuzzy
 msgid "Apple"
-msgstr ""
+msgstr "アップル"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:58
+#, fuzzy
 msgid "Facebook"
-msgstr ""
+msgstr "フェイスブック"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:59
+#, fuzzy
 msgid "Twitter"
-msgstr ""
+msgstr "ツイッター"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:60
+#, fuzzy
 msgid "Spotify"
-msgstr ""
+msgstr "スポティファイ"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:62
+#, fuzzy
 msgid "More to come and contributions are very welcome in this area."
-msgstr ""
+msgstr "今後も、この分野での貢献を大いに期待しています。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:67
+#, fuzzy
 msgid "With Quarkus 2.9, compression support has been added to Reactive Routes and RESTEasy Reactive.  Body of HTTP responses can now be compressed with both these components."
-msgstr ""
+msgstr "Quarkus 2.9では、Reactive RoutesとRESTEasy Reactiveに圧縮のサポートが追加されました。これらのコンポーネントで、HTTPレスポンスのボディを圧縮できるようになりました。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:70
+#, fuzzy
 msgid "More information in the link:/guides/reactive-routes#http-compression[Reactive Routes guide] and the link:/guides/resteasy-reactive#http-compression[RESTEasy Reactive guide]."
-msgstr ""
+msgstr "詳細は、『 link:/guides/reactive-routes#http-compression[Reactive Routes』ガイドと] 『 link:/guides/resteasy-reactive#http-compression[RESTEasy Reactive』ガイドを] 参照してください。"
 
 #. type: Title ===
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:71
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Kafka - Add support for Confluent Schema Registry"
-msgstr ""
+msgstr "Kafka - Confluent Schema Registry のサポートを追加しました。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:74
+#, fuzzy
 msgid "We added support for the Confluent Schema Registry and restructured the schema registry extensions for more flexibility."
-msgstr ""
+msgstr "Confluent Schema Registry のサポートを追加し、スキーマレジストリ拡張を再構築して、より柔軟性を高めました。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:76
+#, fuzzy
 msgid "The updated link:/guides/kafka-schema-registry-avro[Using Apache Kafka with schema registry and Avro guide] contains everything you need to know about these changes."
-msgstr ""
+msgstr "更新された「 link:/guides/kafka-schema-registry-avro[Using Apache Kafka with schema registry and Avro」ガイドには] 、これらの変更について知る必要があるすべての情報が記載されています。"
 
 #. type: Title ===
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:77
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Back channel logout"
-msgstr ""
+msgstr "バックチャンネルログアウト"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:80
+#, fuzzy
 msgid "link:/guides/security-openid-connect-web-authentication#back-channel-logout[Support for OIDC backchannel logout] has been added."
-msgstr ""
+msgstr "link:/guides/security-openid-connect-web-authentication#back-channel-logout[OIDCのバックチャネルログアウトに対応] しました。"
 
 #. type: Title ===
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:81
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Add HTTP headers for specific paths"
-msgstr ""
+msgstr "特定のパスに対するHTTPヘッダを追加する"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:85
+#, fuzzy
 msgid "Until now, you could configure additional HTTP headers globally.  But more often than not, you need to configure HTTP headers for a specific subpath of your application."
-msgstr ""
+msgstr "これまでは、HTTPヘッダをグローバルに追加設定することができました。しかし、多くの場合、アプリケーションの特定のサブパスに対してHTTPヘッダを設定する必要があります。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:88
+#, fuzzy
 msgid "Starting with 2.9, you can use the new `quarkus.http.filter` configuration properties to do so as documented in the link:/guides/http-reference#additional-http-headers-per-path[HTTP Reference guide]."
-msgstr ""
+msgstr "2.9 からは、 link:/guides/http-reference#additional-http-headers-per-path[HTTP Reference ガイドに] 記載されているように、新しい `quarkus.http.filter` 設定プロパティを使用して、これを行うことができます。"
 
 #. type: Title ===
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:89
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Log rotation"
-msgstr ""
+msgstr "ログローテーション"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:92
+#, fuzzy
 msgid "`quarkus.log.file.rotation.max-file-size` is now set to 10 MB by default."
-msgstr ""
+msgstr " `quarkus.log.file.rotation.max-file-size` は、デフォルトで10MBに設定されるようになりました。"
 
 #. type: Title ===
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:93
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "H2 2.1"
-msgstr ""
+msgstr "H2 2.1"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:96
+#, fuzzy
 msgid "We upgraded H2 to from 1.4 to 2.1."
-msgstr ""
+msgstr "H2を1.4から2.1へアップグレードしました。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:101
+#, fuzzy
 msgid "This upgrade comes with a lot of changes, including some breaking ones.  The most common problems come from new reserved keywords such as `user`, `value` or `timestamp`.  If you are using some of these keywords in your model, you will have to adjust, or switch to a container approach for testing instead of using H2."
-msgstr ""
+msgstr "今回のアップグレードでは、多くの変更点があり、その中には破たんするものも含まれています。最も一般的な問題は、 `user` , `value` , `timestamp` のような新しい予約キーワードに起因します。もし、あなたのモデルでこれらのキーワードのいくつかを使っているなら、調整するか、H2を使う代わりにコンテナアプローチに切り替えてテストする必要があるでしょう。"
 
 #. type: Title ===
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:102
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Kotlin 1.6.20"
-msgstr ""
+msgstr "Kotlin 1.6.20"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:105
+#, fuzzy
 msgid "Kotlin has been upgraded to 1.6.20."
-msgstr ""
+msgstr "Kotlinが1.6.20にアップグレードされました。"
 
 #. type: Title ===
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:106
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Scala 2.13"
-msgstr ""
+msgstr "Scala 2.13"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:110
+#, fuzzy
 msgid "We upgraded to Scala 2.13.  Note that there is a https://github.com/quarkiverse/quarkus-scala3[Scala 3 extension in the Quarkiverse]."
-msgstr ""
+msgstr "Scala 2.13にアップグレードしました。なお、 link:https://github.com/quarkiverse/quarkus-scala3[QuarkiverseにはScala 3エクステンションが] あります。"
 
 #. type: Title ==
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:111
@@ -304,8 +338,9 @@ msgstr "コントリビューター"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:115
+#, fuzzy
 msgid "The Quarkus community is growing and has now https://github.com/quarkusio/quarkus/graphs/contributors[632 contributors].  Many many thanks to each and everyone of them."
-msgstr ""
+msgstr "Quarkusコミュニティは成長を続けており、現在 link:https://github.com/quarkusio/quarkus/graphs/contributors[632名のコントリビューターが] います。彼ら一人ひとりに感謝します。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:117
