--- a/l10n/po/ja_JP/_versions/main/guides/security-webauthn.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-webauthn.adoc.po
@@ -28,7 +28,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/security-webauthn.adoc:13
 msgid "This guide demonstrates how your Quarkus application can use WebAuthn authentication instead of passwords."
-msgstr ""
+msgstr "このガイドでは、Quarkus アプリケーションで、パスワードの代わりに WebAuthn 認証を使用する方法を説明します。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/security-webauthn.adoc:16
@@ -45,7 +45,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/security-webauthn.adoc:25
 msgid "https://webauthn.guide/[WebAuthn] is an authentication mechanism designed to replace passwords. In short, every time you write a service for registering new users, or logging them in, instead of asking for a password, you use WebAuthn, which will replace the password."
-msgstr ""
+msgstr "link:https://webauthn.guide/[WebAuthn] は、パスワードを置き換えるために設計された認証メカニズムです。つまり、新しいユーザーを登録したり、ログインしたりするサービスを書くたびに、パスワードを要求する代わりに、WebAuthn を使って、パスワードを置き換えるのです。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-webauthn.adoc:30
@@ -106,7 +106,7 @@ msgstr "`/api/public`"
 #. type: Plain text
 #: upstream/_versions/main/guides/security-webauthn.adoc:68
 msgid "`/api/public/me`"
-msgstr ""
+msgstr "`/api/public/me`"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-webauthn.adoc:69
@@ -1169,7 +1169,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-webauthn.adoc:794
 #, no-wrap
 msgid "Request"
-msgstr ""
+msgstr "リクエスト"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/security-webauthn.adoc:695
@@ -1186,7 +1186,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-webauthn.adoc:745
 #, no-wrap
 msgid "Response"
-msgstr ""
+msgstr "レスポンス"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/security-webauthn.adoc:730
