Add machine translation

--- a/l10n/po/ja_JP/_guides/container-image.adoc.po
+++ b/l10n/po/ja_JP/_guides/container-image.adoc.po
@@ -226,9 +226,9 @@ msgstr "ネイティブコンテナイメージをビルドしたいときに、
 
 #. type: Title ==
 #: upstream/_guides/container-image.adoc:126
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Using @QuarkusIntegrationTest"
-msgstr ""
+msgstr "QuarkusIntegrationTestを使用する。"
 
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:129
