--- a/l10n/po/ja_JP/_guides/gcp-functions.adoc.po
+++ b/l10n/po/ja_JP/_guides/gcp-functions.adoc.po
@@ -524,8 +524,9 @@ msgstr "エントリーポイントは常に `io.quarkus.gcp.functions.QuarkusHt
 #: upstream/_guides/gcp-functions.adoc:308
 #: upstream/_guides/gcp-functions.adoc:339
 #: upstream/_guides/gcp-functions.adoc:370
+#, fuzzy
 msgid "You can also use the new Java 17 runtime by using `--runtime=java17` in the gcloud command line."
-msgstr ""
+msgstr "また、gcloudのコマンドラインで `--runtime=java17` 、新しいJava 17ランタイムを使用することができます。"
 
 #. type: Plain text
 #: upstream/_guides/gcp-functions.adoc:279
