--- a/l10n/po/ja_JP/_guides/hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-orm.adoc.po
@@ -1636,8 +1636,9 @@ msgstr "ジェイエヌディーアイ"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:793
+#, fuzzy
 msgid "The JNDI technology is commonly used in other runtimes to integrate different components.  A common use case is Java Enterprise servers to bind the TransactionManager and the Datasource components to a name, and then have Hibernate ORM configured to look these components up by name.  But in Quarkus this use case doesn't apply as components are injected directly, making JNDI support an unnecessary legacy.  As a precaution, to avoid unexpected use of JNDI, the whole support for JNDI has been disabled in the Hibernate ORM extension for Quarkus.  This is both a security precaution and an optimisation."
-msgstr ""
+msgstr "JNDI技術は、異なるコンポーネントを統合するために他のランタイムで一般的に使用されています。一般的な使用例は、Java Enterpriseサーバーで、TransactionManagerとDatasourceコンポーネントを名前にバインドし、Hibernate ORMがこれらのコンポーネントを名前で検索するように設定することです。しかし、Quarkusでは、コンポーネントが直接注入されるため、このユースケースは適用されず、JNDIサポートは不要なレガシーとなります。JNDIの予期せぬ使用を避けるため、QuarkusのHibernate ORM拡張機能では、JNDIのサポートはすべて無効化されています。これはセキュリティ上の予防策であり、最適化でもあります。"
 
 #. type: Title ===
 #: upstream/_guides/hibernate-orm.adoc:794
