--- a/l10n/po/ja_JP/_guides/kafka-schema-registry-avro.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka-schema-registry-avro.adoc.po
@@ -557,8 +557,9 @@ msgstr "スキーマ・レジストリのURLをどこにも設定していない
 
 #. type: delimited block =
 #: upstream/_guides/kafka-schema-registry-avro.adoc:314
+#, fuzzy
 msgid "Apicurio Registry, in addition to its native API, also exposes an endpoint that is API-compatible with Confluent Schema Registry.  Therefore, this automatic configuration works both for Apicurio Registry serde and Confluent Schema Registry serde."
-msgstr ""
+msgstr "Apicurio Registry はネイティブ API に加えて、Confluent Schema Registry と API 互換のエンドポイントも公開しています。そのため、この自動設定は Apicurio Registry serde と Confluent Schema Registry serde の両方に対して機能します。"
 
 #. type: delimited block =
 #: upstream/_guides/kafka-schema-registry-avro.adoc:317
