--- a/l10n/po/ja_JP/_guides/qute-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/qute-reference.adoc.po
@@ -4894,8 +4894,9 @@ msgstr "ユーザー定義タグは自動登録されません。"
 
 #. type: Plain text
 #: upstream/_guides/qute-reference.adoc:2210
+#, fuzzy
 msgid "A tag can be registered manually via `Engine.builder().addSectionHelper(new UserTagSectionHelper.Factory(\"tagName\",\"tagTemplate.html\")).build()`"
-msgstr ""
+msgstr "タグは、以下の方法で手動で登録できます。 `Engine.builder().addSectionHelper(new UserTagSectionHelper.Factory(\"tagName\",\"tagTemplate.html\")).build()` "
 
 #. type: Labeled list
 #: upstream/_guides/qute-reference.adoc:2211
