--- a/l10n/po/ja_JP/_guides/resteasy-reactive.adoc.po
+++ b/l10n/po/ja_JP/_guides/resteasy-reactive.adoc.po
@@ -4146,48 +4146,57 @@ msgstr "HTTPレスポンス"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive.adoc:2184
+#, fuzzy
 msgid "The body of an HTTP response is not compressed by default.  You can enable the HTTP compression support by means of `quarkus.http.enable-compression=true`."
-msgstr ""
+msgstr "HTTPレスポンスのボディは、デフォルトでは圧縮されません。HTTP 圧縮のサポートは、 `quarkus.http.enable-compression=true` で有効にすることができます。"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive.adoc:2186
+#, fuzzy
 msgid "If compression support is enabled then the response body is compressed if:"
-msgstr ""
+msgstr "圧縮サポートが有効な場合、レスポンスボディは以下の場合に圧縮されます。"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive.adoc:2188
+#, fuzzy
 msgid "the resource method is annotated with `@io.quarkus.vertx.http.Compressed`, or"
-msgstr ""
+msgstr "リソースメソッドが `@io.quarkus.vertx.http.Compressed` でアノテーションされている、または"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive.adoc:2189
+#, fuzzy
 msgid "the `Content-Type` header is set and the value is a compressed media type as configured via `quarkus.http.compress-media-types`."
-msgstr ""
+msgstr " `Content-Type` ヘッダが設定され、その値は `quarkus.http.compress-media-types` を介して設定された圧縮メディアタイプである。"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive.adoc:2191
+#, fuzzy
 msgid "The response body is never compressed if:"
-msgstr ""
+msgstr "の場合、レスポンスボディは決して圧縮されません。"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive.adoc:2193
+#, fuzzy
 msgid "the resource method is annotated with `@io.quarkus.vertx.http.Uncompressed`, or"
-msgstr ""
+msgstr "リソースメソッドが `@io.quarkus.vertx.http.Uncompressed` でアノテーションされている、または"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive.adoc:2194
+#, fuzzy
 msgid "the `Content-Type` header is not set."
-msgstr ""
+msgstr "は、 `Content-Type` ヘッダーが設定されていません。"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive.adoc:2196
+#, fuzzy
 msgid "By default, the following list of media types is compressed: `text/html`, `text/plain`, `text/xml`, `text/css`, `text/javascript` and `application/javascript`."
-msgstr ""
+msgstr "デフォルトでは、以下のメディアタイプのリストが圧縮されています。 `text/html` , `text/plain` , `text/xml` , `text/css` , `text/javascript` , `application/javascript` ."
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive.adoc:2198
+#, fuzzy
 msgid "If the client does not support HTTP compression then the response body is not compressed."
-msgstr ""
+msgstr "クライアントが HTTP 圧縮に対応していない場合、レスポンスボディは圧縮されません。"
 
 #. type: Title ==
 #: upstream/_guides/resteasy-reactive.adoc:2200
