--- a/l10n/po/ja_JP/_guides/security-webauthn.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-webauthn.adoc.po
@@ -1764,8 +1764,9 @@ msgstr "WebAuthnのテスト"
 
 #. type: Plain text
 #: upstream/_guides/security-webauthn.adoc:1063
+#, fuzzy
 msgid "Testing WebAuthn can be complicated because normally you need a hardware token, which is why we've made the `quarkus-test-security-webauthn` extension:"
-msgstr ""
+msgstr "通常、ハードウェアトークンが必要なため、WebAuthn のテストは複雑です。そのため、私たちは `quarkus-test-security-webauthn` という拡張機能を作りました。"
 
 #. type: delimited block -
 #: upstream/_guides/security-webauthn.adoc:1071
@@ -1785,8 +1786,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-webauthn.adoc:1082
+#, fuzzy
 msgid "With this, you can use `WebAuthnHardware` to emulate an authenticator token, as well as the `WebAuthnEndpointHelper` helper methods in order to invoke the WebAuthn endpoints, or even fill your form data for custom endpoints:"
-msgstr ""
+msgstr "これを使うと、 `WebAuthnHardware` を使って認証トークンをエミュレートしたり、WebAuthn のエンドポイントを呼び出すために `WebAuthnEndpointHelper` ヘルパーメソッドを使ったり、カスタムエンドポイントのためにフォームデータを埋め込んだりすることができるようになります。"
 
 #. type: delimited block -
 #: upstream/_guides/security-webauthn.adoc:1086
@@ -2082,8 +2084,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-webauthn.adoc:1274
+#, fuzzy
 msgid "For this test, since we're testing both the provided callback endpoint, which updates users in its `WebAuthnUserProvider` and the manual `LoginResource` endpoint, which deals with users manually, we need to override the `WebAuthnUserProvider` with one that doesn't update the `scooby` user:"
-msgstr ""
+msgstr "このテストでは、その `WebAuthnUserProvider` のユーザーを更新する提供されたコールバックエンドポイントと、手動でユーザーを処理する `LoginResource` エンドポイントの両方をテストしているので、 `WebAuthnUserProvider` を `scooby` のユーザーを更新しないものに上書きする必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/security-webauthn.adoc:1282
