--- a/l10n/po/ja_JP/_guides/security.adoc.po
+++ b/l10n/po/ja_JP/_guides/security.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-05-11 10:12+0000\n"
-"PO-Revision-Date: 2022-02-03 10:20+0900\n"
+"PO-Revision-Date: 2022-05-12 08:55+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -96,21 +96,19 @@ msgstr "BasicおよびForm HTTPベースの認証メカニズムは、Quarkusで
 
 #. type: Title ===
 #: upstream/_guides/security.adoc:39
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "WebAuthn Authentication Mechanism"
-msgstr "認証メカニズムの組み合わせ"
+msgstr "WebAuthn 認証メカニズム"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:44
-#, fuzzy
 msgid "https://webauthn.guide/[WebAuthn] is an authentication mechanism designed to replace passwords. In short, every time you write a service for registering new users, or logging them in, instead of asking for a password, you use WebAuthn, which will replace the password."
-msgstr "link:https://webauthn.guide/[WebAuthn] は、パスワードを置き換えるために設計された認証機構です。つまり、新しいユーザーを登録したり、ログインしたりするサービスを書くたびに、パスワードを要求する代わりに、WebAuthn を使って、パスワードを置き換えるのです。"
+msgstr "link:https://webauthn.guide/[WebAuthn] は、パスワードを置き換えるために設計された認証メカニズムです。つまり、新しいユーザーを登録したり、ログインしたりするサービスを書くたびに、パスワードを要求する代わりにWebAuthn を使って、パスワードを置き換えるのです。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:46
-#, fuzzy
 msgid "Please see xref:security-webauthn.adoc[our dedicated WebAuthn documentation] for more information."
-msgstr "詳しくは link:security-built-in-authentication#mutual-tls[相互TLS認証] をご覧ください。"
+msgstr "詳細については、xref:security-webauthn.adoc[個別のWebAuthnドキュメント]を参照してください。"
 
 #. type: Title ===
 #: upstream/_guides/security.adoc:47
