Apply translation memory

--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-providers.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-providers.adoc.po
@@ -124,7 +124,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-openid-connect-providers.adoc:52
 #, no-wrap
 msgid "Google"
-msgstr ""
+msgstr "Google"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-providers.adoc:55
@@ -253,7 +253,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-openid-connect-providers.adoc:102
 #, no-wrap
 msgid "Microsoft"
-msgstr ""
+msgstr "Microsoft"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-providers.adoc:106
@@ -345,7 +345,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-openid-connect-providers.adoc:143
 #, no-wrap
 msgid "Apple"
-msgstr ""
+msgstr "Apple"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-providers.adoc:148
@@ -606,7 +606,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-openid-connect-providers.adoc:249
 #, no-wrap
 msgid "Facebook"
-msgstr ""
+msgstr "Facebook"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-providers.adoc:254
@@ -692,7 +692,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-openid-connect-providers.adoc:288
 #, no-wrap
 msgid "Twitter"
-msgstr ""
+msgstr "Twitter"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-providers.adoc:292
@@ -821,7 +821,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-openid-connect-providers.adoc:344
 #, no-wrap
 msgid "Spotify"
-msgstr ""
+msgstr "Spotify"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-providers.adoc:347
