--- a/l10n/po/ja_JP/_versions/main/guides/security-webauthn.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-webauthn.adoc.po
@@ -50,7 +50,7 @@ msgstr "link:https://webauthn.guide/[WebAuthn] は、パスワードを置き換
 #. type: Plain text
 #: upstream/_versions/main/guides/security-webauthn.adoc:30
 msgid "WebAuthn replaces the password with a proof of identity. In practice, users, instead of having to invent a password, store it or remember it, will use a hardware token that will generate a proof of identity specifically for your service or website. This can be done by asking users to press their thumb on their phone, or pressing a button on a https://www.yubico.com[YubiKey] on a computer."
-msgstr ""
+msgstr "WebAuthnは、パスワードをIDの証明に置き換えます。実際には、ユーザーは、パスワードを考案したり、保存したり、記憶したりする代わりに、あなたのサービスやウェブサイトのために特別に身元証明を生成するハードウェアトークンを使用することになります。これは、ユーザーに携帯電話で親指を押してもらったり、パソコンで link:https://www.yubico.com[YubiKey] のボタンを押したりすることで実現可能です。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-webauthn.adoc:35
