--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-providers.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-providers.adoc.po
@@ -66,7 +66,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-openid-connect-providers.adoc:24
 #, no-wrap
 msgid "GitHub"
-msgstr ""
+msgstr "GitHub"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-providers.adoc:27
