Add some translations

--- a/l10n/po/ja_JP/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-05-11 12:13+0000\n"
-"PO-Revision-Date: 2022-05-12 08:49+0900\n"
+"PO-Revision-Date: 2022-05-12 12:31+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -309,9 +309,8 @@ msgstr "Quarkusコミュニティは成長を続けており、現在 link:https
 
 #. type: Plain text
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:117
-#, fuzzy
 msgid "In particular for the 2.9 release, thanks to Ales Justin, Alexey Loubyansky, andreaTP, Andy Damevin, aona42, Auri Munoz, Bill Burke, Bruno Oliveira da Silva, Chris Laprun, Clement Escoffier, Darko Janković, Emanuel Alves, Eoin Gallinagh, Eric Deandrea, Erik Mattheis, Erin Schnabel, Falko Modler, Foivos Zakkak, George Gastaldi, Georgios Andrianakis, gregid, Guillaume Le Floch, Guillaume Smet, Holly Cummins, Ioannis Canellos, Jan Knobloch, Jan Martiška, Jeff MAURY, Jonathan Halliday, Joost Timmerman, Jorge Solórzano, Jose, Julia Ruprecht, Kai Hudalla, Katia Aresti, Klemen Kobetič, Knut Wannheden, Konstantin Gribov, Ladislav Thon, Loïc Mathieu, Maciej Swiderski, Manyanda Chitimbo, Marc Nuri, Martin Kouba, Martin Panzer, Matej Novotny, Matthias Andreas Benkard, Michal Karm Babacek, Michal Vavřík, Michał Szynkiewicz, newur, Ozan Gunalp, Paulo Casaes, Paulo Lopes, Robert Stupp, Roberto Cortez, Rostislav Svoboda, Sanne Grinovero, Sergei Portnov, Sergey Beryozkin, Stephane Epardaud, Stuart Douglas, Thomas Segismont, xstefank, Yelzhas Suleimenov, Yoann Rodière, Youngmin Koo, yugoccp, Yukihiro Okada and Zaheed Beita."
-msgstr "特に 2.9 のリリースに関しては、Ales Justin、Alexey Loubyansky、andreaTP、Andy Damevin、aona42、Auri Munoz、Bill Burke、Bruno Oliveira da Silva、Chris Laprun、Clement Escoffier、Darko Jankovi?Emanuel Alves, Eoin Gallinagh, Eric Deandrea, Erik Mattheis, Erin Schnabel, Falko Modler, Foivos Zakkak, George Gastaldi, Georgios Andrianakis, gregid, Guillaume Le Floch, Guillaume Smet, Holly Cummins, Ioannis Canellos, Jan Knobloch, Jan Marti?ka、Jeff MAURY、Jonathan Halliday、Joost Timmerman、Jorge Solrzano、Jose、Julia Ruprecht、Kai Hudalla、Katia Aresti、Klemen Kobeti?Knut Wannheden, Konstantin Gribov, Ladislav Thon, Loc Mathieu, Maciej Swiderski, Manyanda Chitimbo, Marc Nuri, Martin Kouba, Martin Panzer, Matej Novotny, Matthias Andreas Benkard, Michal Karm Babacek, Michal Vav?k, Micha?Szynkiewicz, newur, Ozan Gunalp, Paulo Casaes, Paulo Lopes, Robert Stupp, Roberto Cortez, Rostislav Svoboda, Sanne Grinovero, Sergei Portnov, Sergey Beryozkin, Stephane Epardaud, Stuart Douglas, Thomas Segismont, xstefank, Yelzhas Suleimenov, Yoann Rodire, Youngmin Koo, yugoccp, Yukihiro Okada and Zaheed Beita.の各氏。"
+msgstr "特に 2.9 のリリースに関しては、次の方々に感謝いたします: Ales Justin、Alexey Loubyansky、andreaTP、Andy Damevin、aona42、Auri Munoz、Bill Burke、Bruno Oliveira da Silva、Chris Laprun、Clement Escoffier、Darko Jankovi?Emanuel Alves, Eoin Gallinagh, Eric Deandrea, Erik Mattheis, Erin Schnabel, Falko Modler, Foivos Zakkak, George Gastaldi, Georgios Andrianakis, gregid, Guillaume Le Floch, Guillaume Smet, Holly Cummins, Ioannis Canellos, Jan Knobloch, Jan Marti?ka、Jeff MAURY、Jonathan Halliday、Joost Timmerman、Jorge Solrzano、Jose、Julia Ruprecht、Kai Hudalla、Katia Aresti、Klemen Kobeti?Knut Wannheden, Konstantin Gribov, Ladislav Thon, Loc Mathieu, Maciej Swiderski, Manyanda Chitimbo, Marc Nuri, Martin Kouba, Martin Panzer, Matej Novotny, Matthias Andreas Benkard, Michal Karm Babacek, Michal Vav?k, Micha?Szynkiewicz, newur, Ozan Gunalp, Paulo Casaes, Paulo Lopes, Robert Stupp, Roberto Cortez, Rostislav Svoboda, Sanne Grinovero, Sergei Portnov, Sergey Beryozkin, Stephane Epardaud, Stuart Douglas, Thomas Segismont, xstefank, Yelzhas Suleimenov, Yoann Rodire, Youngmin Koo, yugoccp, Yukihiro Okada and Zaheed Beita."
 
 #. type: Title ==
 #: upstream/_posts/2022-05-11-quarkus-2-9-0-final-released.adoc:118
