Apply translation memory

--- a/l10n/po/ja_JP/_versions/2.2/guides/kafka-schema-registry-avro.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/kafka-schema-registry-avro.adoc.po
@@ -752,7 +752,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/kafka-schema-registry-avro.adoc:440
 #, no-wrap
 msgid "Testing the application"
-msgstr ""
+msgstr "アプリケーションのテスト"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/kafka-schema-registry-avro.adoc:445
