--- a/l10n/po/ja_JP/_versions/2.7/guides/kafka-schema-registry-avro.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.7/guides/kafka-schema-registry-avro.adoc.po
@@ -782,7 +782,7 @@ msgstr ""
 #: upstream/_versions/2.7/guides/kafka-schema-registry-avro.adoc:465
 #, no-wrap
 msgid "Testing the application"
-msgstr ""
+msgstr "アプリケーションのテスト"
 
 #. type: Plain text
 #: upstream/_versions/2.7/guides/kafka-schema-registry-avro.adoc:470
