--- a/l10n/po/ja_JP/_versions/main/guides/jreleaser.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/jreleaser.adoc.po
@@ -109,7 +109,7 @@ msgstr "この作業を続ける前に、プロジェクトをGitHubリポジト
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:78
 msgid "You also need a GitHub Personal Access token to be able to post a release to the repository you just created. Follow the official documentation for link:https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token[creating a personal access token].  Store the newly created token at a safe place for future reference. Next, you have the choice of configuring the token as an environment variable named `JRELEASER_GITHUB_TOKEN` so that the tool can read it. Alternatively you may store the token at a secure location of your choosing, using a `.yml`, `.toml`, `.json`, or `.properties` file. The default location is `~/.jreleaser/config[format]`. For example, using the `.yml` format this file could look like:"
-msgstr ""
+msgstr "また、作成したリポジトリにリリースを投稿するためには、GitHub パーソナルアクセストークンが必要です。 link:https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token[パーソナルアクセストークンの作成]方法は、公式ドキュメントに従ってください。作成したトークンは、今後のために安全な場所に保管しておきましょう。次に、トークンを環境変数 `JRELEASER_GITHUB_TOKEN` として設定し、ツールに読み込ませる方法があります。あるいは、 `.yml` 、 `.toml` 、 `.json` 、 `.properties` のいずれかのファイルを使用して、トークンを安全な場所に保存することもできます。デフォルトの場所は `~/.jreleaser/config[format]` です。例えば、 `.yml` のフォーマットを使用した場合、このファイルは次のようになります。"
 
 #. type: Block title
 #: upstream/_versions/main/guides/jreleaser.adoc:80
@@ -126,7 +126,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:89
 msgid "Alright. Add all sources and create a first commit. You can choose your own conventions for commit messages however you can get more bang for your buck when using JReleaser if you follow the link:https://www.conventionalcommits.org/en/v1.0.0/[Conventional Commits] specification. Make your first commit with the following message \"build: Add initial sources\"."
-msgstr ""
+msgstr "さてさて。すべてのソースを追加し、最初のコミットを作成します。コミットメッセージの規約は自由ですが、 link:https://www.conventionalcommits.org/en/v1.0.0/[Conventional Commits] 仕様に従った方が、JReleaserをより効果的に使うことができます。最初のコミットでは、\"build:Add initial sources\" というメッセージで最初のコミットを行います。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/jreleaser.adoc:90
@@ -137,7 +137,7 @@ msgstr "ネイティブイメージでの配布"
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:95
 msgid "Quarkus already knows how to create a native executable using GraalVM Native Image. The default setup will create a single executable file following a naming convention. However the JReleaser tool expects a distribution that is, a conventional file structure packaged as a Zip or Tar file. The file structure must follow this layout:"
-msgstr ""
+msgstr "Quarkusは、GraalVM Native Imageを使用してネイティブ実行可能ファイルを作成する方法をすでに知っています。デフォルトの設定では、命名規則に従って1つの実行ファイルが作成されます。しかし、JReleaserツールは、ZipまたはTarファイルとしてパッケージ化された従来のファイル構造であるディストリビューションを期待しています。ファイル構造は以下のようなレイアウトになっている必要があります。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/jreleaser.adoc:103
@@ -153,7 +153,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:107
 msgid "This structure lets you add all kinds of supporting files required by the executable, such as configuration files, shell completion scripts, man pages, license, readme, and more."
-msgstr ""
+msgstr "この構造では、設定ファイル、シェル補完スクリプト、マンページ、ライセンス、Readmeなど、実行ファイルに必要なあらゆる種類のサポートファイルを追加することができます。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/jreleaser.adoc:108
@@ -164,12 +164,12 @@ msgstr "ディストリビューションの作成"
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:113
 msgid "We can leverage the link:http://maven.apache.org/plugins/maven-assembly-plugin/[maven-assembly-plugin] to create such a distribution. We'll also make use of the link:https://github.com/trustin/os-maven-plugin[os-maven-plugin] to properly identify the platform on which this executable can run, adding said platform to the distribution's filename."
-msgstr ""
+msgstr "link:http://maven.apache.org/plugins/maven-assembly-plugin/[maven-assembly-plugin]を利用して、このようなディストリビューションを作成することができます。また、 link:https://github.com/trustin/os-maven-plugin[os-maven-plugin] を利用して、この実行ファイルが実行可能なプラットフォームを適切に識別し、ディストリビューションのファイル名にそのプラットフォームを追加します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:116
 msgid "First, let's add the os-maven-plugin to the `pom.xml`. This plugin works as a Maven extension and as such must be added to the `<build>` section of the file:"
-msgstr ""
+msgstr "まず、 `pom.xml` に os-maven-plugin を追加しましょう。このプラグインは、Maven のエクステンションとして動作するため、ファイルの `<build>` セクションに追加する必要があります。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/jreleaser.adoc:128
@@ -189,7 +189,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:134
 msgid "Next, native executables on Linux and macOS platforms typically do not have a file extension but Windows executables do, we need to take care of this when renaming the generated executable. We can also place the generated distributions into their own directory to avoid cluttering the `target` directory. Thus, let's add a couple of properties to the existing `<properties>` section in the `pom.xml`:"
-msgstr ""
+msgstr "次に，Linux や macOS プラットフォーム上のネイティブ実行可能ファイルには通常拡張子がありませんが，Windows の実行ファイルには拡張子がありますので，生成された実行ファイルの名前を変更する際にはこの点に注意する必要があります．また，生成されたディストリビューションを独自のディレクトリに配置することで， `target` ディレクトリが散らかるのを防ぐことができます．そこで、 `pom.xml` の既存の `<properties>` セクションに、いくつかのプロパティを追加してみましょう。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/jreleaser.adoc:139
@@ -719,7 +719,7 @@ msgstr ""
 #: upstream/_versions/main/guides/jreleaser.adoc:547
 #, no-wrap
 msgid "app.rb"
-msgstr ""
+msgstr "app.rb"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/jreleaser.adoc:556
@@ -769,7 +769,7 @@ msgstr "さらに詳しく"
 #. type: Plain text
 #: upstream/_versions/main/guides/jreleaser.adoc:576
 msgid "link:https://jreleaser.org/guide/latest/index.html[JReleaser] documentation."
-msgstr ""
+msgstr "link:https://jreleaser.org/guide/latest/index.html[JReleaser]のドキュメント"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/jreleaser.adoc:577
